plugins {
  id 'java'
  id 'org.springframework.boot' version '4.1.0'
  id 'io.spring.dependency-management' version '1.1.7'
}

group = 'uk.co.bhavanasig'
version = '1.0-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(26)
  }
}

repositories {
  mavenCentral()
  maven {
    url = "https://plugins.gradle.org/m2/"
  }
  maven {
    url = 'https://releases.aspose.com/java/repo/'
  }
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-webmvc'
  implementation 'org.apache.commons:commons-lang3:3.20.0'
  implementation 'org.apache.commons:commons-collections4:4.5.0'
  implementation 'org.apache.commons:commons-text:1.15.0'
  implementation("org.springframework.boot:spring-boot-starter-cache")
  implementation("org.springframework.boot:spring-boot-starter-data-redis")
  testImplementation platform('org.junit:junit-bom:6.0.0')
  testImplementation 'org.junit.jupiter:junit-jupiter'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  runtimeOnly 'com.h2database:h2'
  runtimeOnly 'org.postgresql:postgresql'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

test {
  useJUnitPlatform()
}

def ENABLE_PREVIEW = "--enable-preview"

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += [ENABLE_PREVIEW]
  options.release.set(26)
}

tasks.withType(Test).configureEach {
  jvmArgs += [ENABLE_PREVIEW]
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += [ENABLE_PREVIEW]
}
